rewrite sink connector by java 17 toList